# Lattice_Recreation

./: CMakeLists.txt  main.cpp
camera/: Camera.cpp  Camera.h
lattice/: Lattice.cpp  Lattice.h
lattice/kernels/: kernels.cpp  kernels.h
mesh/: Mesh.cpp  Mesh.h  SparsePoint.cpp  SparsePoint.h
multipointer/: MultiPointer.h
parser/: parser.cpp  parser.h
program/: Program.cpp  Program.h  Shader.cpp  Shader.h
render/: RenderObject.cpp  RenderObject.h  Scene.cpp  Scene.h
shaders/: shader.frag  shader.vert
